# i3buntu

./: .deepsource.toml  .editorconfig  .env  .gitignore  .gitmodules  .install_log  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  Justfile  LICENSE.md  Makefile  README.md  SECURITY.adoc  TODO.md  apollo  apollo.REMOVED.git-id  i3buntu  init.sh  install.sh
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  default-issue-template.md  feature-request.md
.github/workflows/: labeler.yml  linting.yml  testing.yml
app/: Cargo.toml
app/src/: main.rs
app/src/lib/: init.rs  interact.rs  mod.rs
app/src/lib/components/: mod.rs  stage_one.rs  stage_three.rs  stage_two.rs
athena/: Cargo.toml  Makefile
athena/docs/: cw.md  cws.md  desktop_shell.png.REMOVED.git-id  filemanager.png.REMOVED.git-id  macOS.md  server.md
athena/resources/config/: Xresources
athena/resources/config/home/: .Xresources  .bash_aliases  .bashrc
athena/resources/config/home/.config/: compton.conf
athena/resources/config/home/.config/Code/User/: settings.json
athena/resources/config/home/.config/alacritty/: alacritty.yml
athena/resources/config/home/.config/dunst/: dunstrc
athena/resources/config/home/.config/i3/: config  i3statusconfig
athena/resources/config/home/.config/nvim/: .ycm_extra_conf.py  init.vim
athena/resources/config/home/.config/picom/: picom.conf
athena/resources/config/home/.config/rofi/: config.rasi
athena/resources/config/home/.local/share/: icons.tar.xz
athena/resources/config/home/.local/share/fonts/: FiraCode.tar.xz  FiraMono.tar.xz
athena/resources/config/home/.local/share/icons/: whiteSur.tar.xz
athena/resources/config/home/.local/share/nautilus-python/extensions/: nautilus-code.py  nautilus-terminal.py
athena/resources/config/home/.local/share/nvim/site/autoload/: plug.vim
athena/resources/config/macOS/: .bash_aliases  .bashrc
athena/resources/firefox/extensions/tst/: config.json  custom.css
athena/resources/firefox/hntp/: custom.css
athena/resources/programs/: ppas.json  programs.json  server.json
athena/resources/sys/other_cfg/: redshift.conf
athena/resources/sys/sh/macOS/: .bash_aliases
athena/resources/sys/vscode/: extensions.sh
athena/resources/theme/: background.png.REMOVED.git-id  nordic_darker.tar.xz.REMOVED.git-id
athena/scripts/: .editorconfig  exa.sh  fonts.sh  get_exa.sh  get_rust.sh  i3_rounded_corners.sh  i3rdp.sh  nvim_ycm.sh  nvim_ycm_compilation.sh  old_and_to_implent.sh  rd.sh  rdv.sh  reference.sh  server_configuration.sh  server_packaging.sh  x_packaging.sh  ycm.sh
athena/src/: lib.rs
athena/src/controller/: control_flow.rs  mod.rs  resources.rs
athena/src/data/: mod.rs  structures.rs  traits.rs
athena/src/log/: console.rs  mod.rs
hermes/: Cargo.toml  Makefile  README.md  hermes-stack.yml  init.sh  make.sh
hermes/src/: main.rs
kyrene/: Cargo.toml  Makefile  README.md  kyrene.REMOVED.git-id
kyrene/src/: main.rs
kyrene/src/lib/: data.rs  init.rs  interact.rs  log.rs  mod.rs
kyrene/src/lib/components/: general.rs  mod.rs  stage_four.rs  stage_one.rs  stage_three.rs  stage_two.rs
kyrene/src/lib/work/: general.rs  mod.rs  stage_one.rs  stage_three.rs  stage_two.rs
provider/: .dockerignore  Cargo.toml  Dockerfile  Makefile  init.sh  make.sh
provider/src/: main.rs
resources/X/: .Xresources  config  xorg.conf
resources/bash/: .bash_aliases  (+1 more)
scripts/: .install_log  configuration.sh  dependencies.sh  extraPackages.sh  grub  init.sh  install.sh  installCfg.sh  installFont.sh  installPackages.sh  install_code_extensions.sh  packaging.sh  removePackages.sh  setup.sh  test.sh  testScript.sh  update_sha_sums.sh  ycm.sh
tests/: shellcheck.sh
(+377 files in other folders)
