[package]
name = "app"
version = "0.1.0"
authors = ["Georg Lauterbach <infrastructure@itbsd.com>"]
edition = "2018"
description = "Custom LINUX setup and bootstrapping BIN"
license-file = "../LICENSE"
keywords = [ "LINUX", "SETUP" ]
publish = false

workspace = ".."

[dependencies]
library = { path = "../library" }

colored = "2.0.0"
dirs-next = "1.0.1"
scan-rules = "0.2.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
