[package]
name = "app"
version = "0.4.2"
authors = ["Georg Lauterbach <infrastructure@itbsd.com>"]
edition = "2018"
description = "Custom LINUX setup and bootstrapping BIN"
license-file = "../LICENSE"
keywords = [ "LINUX", "SETUP" ]
publish = false

workspace = ".."

[dependencies]
library = { path = "../library", version = "0.*" }

colored = "2.0.0"
dirs-next = "2.0.0"
scan-rules = "0.2.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
