[package]
name = "hermes"
version = "0.1.0"
authors = ["Georg Lauterbach <infrastructure@itbsd.com>"]
edition = "2018"

description = "A forward-agent for APOLLO"
readme = "./README.md"

license-file = "../LICENSE"

keywords = ["APOLLO", "html-forwarding"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
